--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,10 +2,11 @@
 
 path:
   output_root_dir: "/home/norbert/repos/bags-to-dataset"
-  bag_dir: "/home/norbert/rosbags/lane-bags"
+  bag_dir: "/home/norbert/lane-det-data"
+  bag_idx: 5
 
 ros:
   topic:
-    img_topic_name: "/pylon_camera_node/image_raw"
+    img_topic_name: /zed_node/left/image_rect_color/compressed
 data:
-  interval: 2.0
+  interval: 0.5
